--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-2-3">
+      <div class="pure-u-1-3">
         <div id="vis2" class="vis-container"></div>
+      </div>
+    </div>
+    <!-- end pure grid group -->
+
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-4">
+        <div id="vis3" class="vis-container"></div>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -58,9 +66,11 @@
   <script type="text/javascript">
     var specVis1 = "js/map.vg.json";
     var specVis2 = "js/refinery_production.vg.json";
+    var specVis3 = "js/stock.vg.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
     vegaEmbed('#vis2', specVis2, { "actions": false });
+    vegaEmbed('#vis3', specVis3, { "actions": false });
   </script>
 </body>
 
