--- a/index.html
+++ b/index.html
@@ -61,16 +61,26 @@
     </div>
     <!-- end pure grid group -->
 
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-5">
+        <div id="vis4" class="vis-container"></div>
+      </div>
+    </div>
+    <!-- end pure grid group -->
+
   </div> <!-- end page -->
 
   <script type="text/javascript">
     var specVis1 = "js/map.vg.json";
     var specVis2 = "js/refinery_production.vg.json";
     var specVis3 = "js/stock.vg.json";
+    var specVis3 = "js/fuel_prices.vg.json";
 
     vegaEmbed('#vis1', specVis1, { "actions": false });
     vegaEmbed('#vis2', specVis2, { "actions": false });
     vegaEmbed('#vis3', specVis3, { "actions": false });
+    vegaEmbed('#vis4', specVis4, { "actions": false });
   </script>
 </body>
 
