--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 
   <!-- CSS file -->
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
@@ -30,49 +31,140 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-1">
+      <div class="pure-u-1">
         <h1>Petroleum in Australia</h1>
-        <p>This visualisation is about petroleum in Australia.</p>
+      </div>
+      <div class="pure-u-1-3">
+        <div class="description description-left pop-box">
+          <div class="emphasis-container">
+            <h2>Overview</h2>
+            <p class="small-font">Australia is a significant producer and importer of petroleum with several petroleum companies engaged in both upstream and downstream.</p>
+          </div>
+        </div>
+      </div>
+      <div class="pure-u-1-3">
+        <div class="description description-right pop-box">
+          <div class="emphasis-container">
+            <p class="small-font">Rank</p>
+            <p class="large-font">31st</p>
+            <p class="small-font">in the World for Oil Production</p>
+          </div>
+        </div>
+      </div>
+      <div class="pure-u-1-3">
+        <div class="description description-right pop-box">
+          <div class="emphasis-container">
+            <p class="small-font">Australia</p>
+            <p class="large-font">1st</p>
+            <p class="small-font">Produced and Sold in 1886</p>
+          </div>
+        </div>
       </div>
     </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-1-2">
+    <div class="pure-g graph-container">
+      <div class="pure-u-1">
+        <h2>Petroleum Sales by State (2020-2024)</h2>
+      </div>
+      <div class="pure-u-2-3">
         <div id="vis1" class="vis-container"></div>
       </div>
+      <div class="pure-u-1-3">
+        <div class="description-container">
+          <div class="description description-top pop-box">
+            <p>Why NSW has the highest sales? </p> 
+            <p>NSW has highest population among other states in Australia which means greater demand of petroleum for transportation. </p>
+          </div>
+          <div class="description description-bottom pop-box">
+            <p>Why Northern Territory has lowest sales? </p>
+            <p>Tasmania is the least populated state, but Northern Territory has lower sales. 
+              This could be due to its urbanisation, tourism, and reliance on transport logistics. </p>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-1-3">
+    <div class="pure-g graph-container">
+      <div class="pure-u-1">
+        <h2>Rank of Regional Production (2020-2024)</h2>
+      </div>
+      <div class="pure-u-1-4">
+        <div class="description description-left pop-box">
+          <p>This chart allows users to compare the production of petroleum by basin. </p>
+          <p>Amadeus / Bonaparte / Canning steadyily consistently ranking at the bottom, possibly due to diminishing reserves or reduced exploration efforts in the region. </p>
+        </div>
+      </div>
+      <div class="pure-u-3-4">
+        <div id="vis5" class="vis-container"></div>
+      </div>
+    </div>
+    <!-- end pure grid group -->
+
+    <!-- pure grid group -->
+    <div class="pure-g graph-container">
+      <div class="pure-u-1">
+        <h2>Refinery Production (2020-2024)</h2>
+      </div>
+        <div class="pure-u-1-2">
+          <div class="description description-left pop-box">
+            <p>There is a significant decline in total refinery production.</p>
+          </div>
+        </div>
+        <div class="pure-u-1-2">
+          <div class="description description-right pop-box">
+            <p>This could be due to the global impact of COVID-19 pandamic which causes reduced petroleum consumption due to reduced transportation and travel restrictions.</p>
+          </div>
+        </div>
+      <div class="pure-u-1">
         <div id="vis2" class="vis-container"></div>
       </div>
     </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-    <div class="pure-g">
+    <div class="pure-g graph-container">
+      <div class="pure-u-1">
+        <h2>Stock Volume by Product (2020-2024)</h2>
+      </div>
       <div class="pure-u-1-4">
+        <div class="description description-left pop-box">
+          <p>Crude oil and refinery feedstocks, automotive gasoline, and diesel oil are the primary drivers of stock volume.</p>
+        </div>
+      </div>
+      <div class="pure-u-3-4">
         <div id="vis3" class="vis-container"></div>
       </div>
     </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-1-5">
+    <div class="pure-g graph-container">
+      <div class="pure-u-1">
+        <h2>Fuel Prices (2020-2024)</h2>
+      </div>
+      <div class="pure-u-3-4">
         <div id="vis4" class="vis-container"></div>
+      </div>
+      <div class="pure-u-1-4"> 
+        <div class="description description-right pop-box">
+          <p>Premium unleaded petrol (95 RON) is the most expensive fuel. </p>
+          <p>Fuel prices are at peak during year 2022. </p>
+        </div>
       </div>
     </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-1-6">
-        <div id="vis5" class="vis-container"></div>
+      <div class="pure-u-1">
+        <h2>Conclusion</h2>
+        <div class="description pop-box">
+          <p>Write a brief summary...</p>
+        </div>
       </div>
     </div>
     <!-- end pure grid group -->
