--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
       </div>
         <div class="pure-u-1-2">
           <div class="description description-left pop-box">
-            <p>There is a significant decline in total refinery production.</p>
+            <p>The significant decline in total refinary production could be due to the global impact of COVID-19 pandamic which causes reduced petroleum consumption due to reduced transportation and travel restrictions.</p>
           </div>
         </div>
         <div class="pure-u-1-2">
           <div class="description description-right pop-box">
-            <p>This could be due to the global impact of COVID-19 pandamic which causes reduced petroleum consumption due to reduced transportation and travel restrictions.</p>
+            <p>The prolonged lower levels of fuel production might signal the beginning of a broader energy transition, as countries move toward cleaner, more sustainable sources of energy, impacting long-term demand for fossil fuels.</p>
           </div>
         </div>
       <div class="pure-u-1">
@@ -132,6 +132,7 @@
       </div>
       <div class="pure-u-1-4">
         <div class="description description-left pop-box">
+          <p>The graph shows recurring cyclic trends in stock volumes for most products, with peaks and troughs that suggest seasonal demand fluctuations, particularly for automotive gasoline and diesel oil.</p>
           <p>Crude oil and refinery feedstocks, automotive gasoline, and diesel oil are the primary drivers of stock volume.</p>
         </div>
       </div>
