--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Multiple Visualisations | An Example</title>
+  <title>Petroleum in Australia</title>
   <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
@@ -95,6 +95,7 @@
       <div class="pure-u-1-4">
         <div class="description description-left pop-box">
           <p>This chart allows users to compare the production of petroleum by basin. </p>
+          <p>Browse / Carnarvon / Perth (ML) consistently holds the top rank throughout all financial years. </p>
           <p>Amadeus / Bonaparte / Canning steadyily consistently ranking at the bottom, possibly due to diminishing reserves or reduced exploration efforts in the region. </p>
         </div>
       </div>
@@ -154,17 +155,6 @@
         <div class="description description-right pop-box">
           <p>Premium unleaded petrol (95 RON) is the most expensive fuel. </p>
           <p>Fuel prices are at peak during year 2022. </p>
-        </div>
-      </div>
-    </div>
-    <!-- end pure grid group -->
-
-    <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-1">
-        <h2>Conclusion</h2>
-        <div class="description pop-box">
-          <p>Write a brief summary...</p>
         </div>
       </div>
     </div>
