--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1>Petroleum in Australia</h1>
       </div>
       <div class="pure-u-1-3">
-        <div class="description description-left pop-box">
+        <div class="description description-left three-box">
           <div class="emphasis-container">
             <h2>Overview</h2>
             <p class="small-font">Australia is a significant producer and importer of petroleum with several petroleum companies engaged in both upstream and downstream.</p>
@@ -43,20 +43,20 @@
         </div>
       </div>
       <div class="pure-u-1-3">
-        <div class="description description-right pop-box">
+        <div class="description description-right three-box">
           <div class="emphasis-container">
-            <p class="small-font">Rank</p>
+            <h2>Rank</h2>
             <p class="large-font">31st</p>
-            <p class="small-font">in the World for Oil Production</p>
+            <p class="small-font">in the World for Oil Production.</p>
           </div>
         </div>
       </div>
       <div class="pure-u-1-3">
-        <div class="description description-right pop-box">
+        <div class="description description-right three-box">
           <div class="emphasis-container">
-            <p class="small-font">Australia</p>
+            <h2>Australia</h2>
             <p class="large-font">1st</p>
-            <p class="small-font">Produced and Sold in 1886</p>
+            <p class="small-font">Produced and Sold in Year 1886.</p>
           </div>
         </div>
       </div>
@@ -64,9 +64,11 @@
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-    <div class="pure-g graph-container">
+    <div class="pure-g graph-container out-box">
       <div class="pure-u-1">
-        <h2>Petroleum Sales by State (2020-2024)</h2>
+        <div class="title-container">
+          <h2>Petroleum Sales by State (2020-2024)</h2>
+        </div>
       </div>
       <div class="pure-u-2-3">
         <div id="vis1" class="vis-container"></div>
@@ -88,12 +90,14 @@
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-    <div class="pure-g graph-container">
+    <div class="pure-g graph-container out-box">
       <div class="pure-u-1">
-        <h2>Rank of Regional Production (2020-2024)</h2>
+        <div class="title-container">
+          <h2>Rank of Regional Production (2020-2024)</h2>
+        </div>
       </div>
       <div class="pure-u-1-4">
-        <div class="description description-left pop-box">
+        <div class="description description-left rank-box">
           <p>This chart allows users to compare the production of petroleum by basin. </p>
           <p>Browse / Carnarvon / Perth (ML) consistently holds the top rank throughout all financial years. </p>
           <p>Amadeus / Bonaparte / Canning steadyily consistently ranking at the bottom, possibly due to diminishing reserves or reduced exploration efforts in the region. </p>
@@ -106,33 +110,37 @@
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-    <div class="pure-g graph-container">
+    <div class="pure-g graph-container out-box">
       <div class="pure-u-1">
-        <h2>Refinery Production (2020-2024)</h2>
+        <div class="title-container">
+          <h2>Refinery Production (2020-2024)</h2>
+        </div>
       </div>
         <div class="pure-u-1-2">
-          <div class="description description-left pop-box">
+          <div class="description description-left left-box">
             <p>The significant decline in total refinary production could be due to the global impact of COVID-19 pandamic which causes reduced petroleum consumption due to reduced transportation and travel restrictions.</p>
           </div>
         </div>
         <div class="pure-u-1-2">
-          <div class="description description-right pop-box">
+          <div class="description description-right right-box">
             <p>The prolonged lower levels of fuel production might signal the beginning of a broader energy transition, as countries move toward cleaner, more sustainable sources of energy, impacting long-term demand for fossil fuels.</p>
           </div>
         </div>
       <div class="pure-u-1">
-        <div id="vis2" class="vis-container"></div>
+        <div id="vis2" class="big-container"></div>
       </div>
     </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-    <div class="pure-g graph-container">
+    <div class="pure-g graph-container out-box">
       <div class="pure-u-1">
-        <h2>Stock Volume by Product (2020-2024)</h2>
+        <div class="title-container">
+          <h2>Stock Volume by Product (2020-2024)</h2>
+        </div>
       </div>
       <div class="pure-u-1-4">
-        <div class="description description-left pop-box">
+        <div class="description description-left stock-box">
           <p>The graph shows recurring cyclic trends in stock volumes for most products, with peaks and troughs that suggest seasonal demand fluctuations, particularly for automotive gasoline and diesel oil.</p>
           <p>Crude oil and refinery feedstocks, automotive gasoline, and diesel oil are the primary drivers of stock volume.</p>
         </div>
@@ -144,15 +152,17 @@
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-    <div class="pure-g graph-container">
+    <div class="pure-g graph-container out-box">
       <div class="pure-u-1">
-        <h2>Fuel Prices (2020-2024)</h2>
+        <div class="title-container">
+          <h2>Fuel Prices (2020-2024)</h2>
+        </div>
       </div>
       <div class="pure-u-3-4">
-        <div id="vis4" class="vis-container"></div>
+        <div id="vis4" class="fuel-container"></div>
       </div>
       <div class="pure-u-1-4"> 
-        <div class="description description-right pop-box">
+        <div class="description description-right fuel-box">
           <p>Premium unleaded petrol (95 RON) is the most expensive fuel. </p>
           <p>Fuel prices are at peak during year 2022. </p>
         </div>
